--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@fortawesome/vue-fontawesome": "^2.0.2",
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
+    "github-markdown-css": "^4.0.0",
+    "marked": "^2.0.3",
     "vue": "^2.6.11",
     "vue-router": "^3.5.1",
     "vue2-animate": "^2.1.4"
